# deditor

./: .directory
deditor/: .directory  deditor.cpp  deditor.h  deditor.pri  deditor.ui  domattr.cpp  domattr.h  domitem.cpp  dommodel.cpp  dommodel.h  xmlschema.cpp  xmlschema.h
primer/: .directory
primer/DGVector/: .cproject.xml  .directory  .project.xml  CMakeLists.txt  UpgradeLog.htm  dgvector  dgvector.cpp  dgvector.h  dgvector.pro  dgvector.qrc  dgvector.sln  dgvector.vcproj  dgvector.vcxproj  dgvector.vcxproj.filters  main.cpp
primer/DGVector/Backup/: dgvector.sln
primer/DGVector/Win32/Release/dgvector.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  dgvector.lastbuildstate
primer/DGVector/com485/: CMakeLists.txt  com485.cpp  com485.h  com485.pri
primer/DGVector/data/: CMakeLists.txt  data.cpp  data.h  data.pri  data.ui  datatable.cpp  datatable.h
primer/DGVector/deditor/: CMakeLists.txt  deditor.cpp  deditor.h  deditor.pri  deditor.ui  domattr.cpp  domattr.h  domitem.h  xmlschema.cpp  xmlschema.h
primer/DGVector/dgserver/: CMakeLists.txt  dgserver  dgserver.cpp  dgserver.h  dgserver.pro  main.cpp
primer/DGVector/execut/: CMakeLists.txt  execut.cpp  execut.h  execut.pri  tape.cpp  tape.h
primer/DGVector/former/: .directory  CMakeLists.txt  former.cpp  former.h  former.pri  info.cpp  info.h  report.cpp  report.h  ui_report.h
primer/DGVector/helpbrowser/: CMakeLists.txt  helpBrowser.cpp  helpBrowser.h  helpBrowser.pri
primer/DGVector/hexspinbox/: CMakeLists.txt  hexspinbox.cpp  hexspinbox.h  hexspinbox.pri
primer/DGVector/ipport/: CMakeLists.txt  ipport.cpp  ipport.h  ipport.pri
primer/DGVector/libmaia/: CMakeLists.txt  http_headers.cpp  http_headers.h  maia.prf  maia.pri  maia.pro  maiaCore.cpp  maiaCore.h  maiaObject.cpp  maiaObject.h  maiaXmlRpcClient.cpp  maiaXmlRpcClient.h  maiaXmlRpcServer.cpp  maiaXmlRpcServer.h
primer/DGVector/mdata/: CMakeLists.txt  mdata.cpp  mdata.h  mdata.pri
primer/DGVector/parser/: CMakeLists.txt  parser.cpp  parser.h  parser.pri
primer/DGVector/qextserialport/: .directory  posix_qextserialport.cpp  qextserialport.h  qextserialport.pri
primer/DGVector/qtserialport/: qt4support.pri  qtserialport.pri
primer/DGVector/qtserialport/src/serialport/: .directory  qserialportinfo_unix.cpp
primer/DGVector/qtservice/: CMakeLists.txt
primer/DGVector/qtsingleapplication/: CMakeLists.txt
primer/DGVector/resource/: .directory  devices.xml  devices.xsd  dgvector_ru.qm  dgvector_ru.ts  template.html
primer/DGVector/search/: CMakeLists.txt  search.cpp  search.h  search.pri  search.ui
primer/DGVector/server/: DBTable.cpp  DBTable.h  ExeListThread.cpp  ExeListThread.h  ExeThread.cpp  ExeThread.h  Sheduler.cpp  Sheduler.h  const.cpp  const.h  dataCollector.cpp  dataCollector.h  dataServer.cpp  dataServer.h  dataTableMySQL.h  dataTablePostgreSQL.h  dbConnector.cpp  dbConnector.h  dbOSCFile.cpp  dbOSCFile.h  dgserver_global.h  dgsrv_resource.rc  dgsrvd_resource.rc  logFile.cpp  logFile.h  mMap.cpp  mMap.h  mdbServer.cpp  mdbServer.h  oscCollector.cpp  oscCollector.h  sdiagCollector.cpp  sdiagCollector.h  server.cpp  server.h  server.pri  server.pro  server.qrc  server.sln  server.vcproj  (+2 more)
primer/DGVector/server/lib/: .directory
primer/DGVector/server/libW2015/: .directory  dgsrv1.lib
primer/DGVector/server/opcua62541/: opcuaServer.cpp  opcuaServer.h  opcuaServer.pri  qopen62541.pri
primer/DGVector/server/opcua62541/open62541/: open62541.c  open62541.h
primer/DGVector/server/opcua62541/qopen62541/: qopen62541utils.cpp
primer/DGVector/server/opcua62541/qopen62541/QtOpcUa/: qopcuabinarydataencoding.h  qopcuanodeids.h  qopcuatype.h
primer/DGVector/server/resource/: modbus.xml  modbus.xsd  settings.xml  settings.xsd
primer/DGVector/tunerWin/: CMakeLists.txt  tunerwin.cpp  tunerwin.h  tunerwin.pri  tunerwin.ui
primer/DGVector/windows/: .directory
primer/DGVector/windows/MVC2015/: dgvector.ini  modbus.xml  settings.xml
primer/DGVector/windows/MVC2015/tmp/: modbus.xml  settings.xml
primer/DGVector/windows/WINGCC_5/: modbus.xml  settings.xml
primer/DGVector/windows/WINGCC_5/tmp/: modbus.xml  settings.xml
primer/DGVector/xmlConverter/: CMakeLists.txt  xmlConverter.cpp  xmlConverter.h  xmlConverter.pri
